[tool.poetry]
name = "AmpBlock"
version = "0.1.0"
description = "Self hostable web API that detects AMP links"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"
urlextract = "^1.8.0"
validators = "^0.20.0"
tldextract = "^3.4.4"
beautifulsoup4 = "^4.12.2"
newspaper3k = "^0.2.8"
aiohttp = "^3.8.4"
aiodns = "^3.0.0"
async-lru = "^1.0.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
