[tool.poetry]
name = "AmpBlock"
version = "0.1.0"
description = "Self hostable web API that detects AMP links"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
urlextract = "^1.8.0"
validators = "^0.21.2"
tldextract = "^3.6.0"
beautifulsoup4 = "^4.12.2"
newspaper3k = "^0.2.8"
aiohttp = "^3.8.5"
aiodns = "^3.0.0"
async-lru = "^2.0.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
